--- a/RugbyManagementGameV1/RugbyManagementGameV1/RugbyManagementGameV1.csproj
+++ b/RugbyManagementGameV1/RugbyManagementGameV1/RugbyManagementGameV1.csproj
@@ -34,7 +34,11 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Player.cs" />
+    <Compile Include="Models\Team.cs" />
+    <Compile Include="Models\Player.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
