--- a/RugbyManagementGameV1/RugbyManagementGameV1/RugbyManagementGameV1.csproj
+++ b/RugbyManagementGameV1/RugbyManagementGameV1/RugbyManagementGameV1.csproj
@@ -36,6 +36,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Team.cs" />
     <Compile Include="Models\Player.cs" />
+    <Compile Include="Models\Competition.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
