--- a/RugbyManagementGameV1/RugbyTests/RugbyTests.csproj
+++ b/RugbyManagementGameV1/RugbyTests/RugbyTests.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TestPlayer.cs" />
+    <Compile Include="TestTeam.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
