added method for winning range for a team

--- a/RugbyManagementGameV1/RugbyManagementGameV1/RugbyManagementGameV1.csproj
+++ b/RugbyManagementGameV1/RugbyManagementGameV1/RugbyManagementGameV1.csproj
@@ -37,6 +37,7 @@
     <Compile Include="Models\Team.cs" />
     <Compile Include="Models\Player.cs" />
     <Compile Include="Models\Competition.cs" />
+    <Compile Include="Models\Game.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
