--- a/RugbyManagementGameV1/RugbyTests/RugbyTests.csproj
+++ b/RugbyManagementGameV1/RugbyTests/RugbyTests.csproj
@@ -34,7 +34,7 @@
     <Compile Include="TestPlayer.cs" />
     <Compile Include="TestTeam.cs" />
     <Compile Include="TestCompetition.cs" />
-    <Compile Include="GameTest.cs" />
+    <Compile Include="TestGame.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
