--- a/RugbyManager2017/RugbyManager2017/RugbyManager2017.csproj
+++ b/RugbyManager2017/RugbyManager2017/RugbyManager2017.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="1.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Models\EmptyEnumeration.cs" />
+    <Compile Remove="Models\TeamNameEnums.cs" />
+  </ItemGroup>
 </Project>
