--- a/RugbyManager2017/RugbyManager2017/RugbyManager2017.csproj
+++ b/RugbyManager2017/RugbyManager2017/RugbyManager2017.csproj
@@ -8,6 +8,7 @@
     <Folder Include="wwwroot\" />
     <Folder Include="Models\" />
     <Folder Include="Models\Seeds\" />
+    <Folder Include="Tests\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -15,6 +16,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="1.1.2" />
+    <PackageReference Include="NUnit" Version="3.7.1" />
+    <PackageReference Include="NUnit.Console" Version="3.6.1" />
   </ItemGroup>
 
   <ItemGroup>
